--- a/Depo/Depo/Presentation/UserStories/Settings/ConnectedAccounts/Cells/AppleGoogleAccountConnectionCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ConnectedAccounts/Cells/AppleGoogleAccountConnectionCell.xib
@@ -19,7 +19,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AppleGoogleAccountConnectionCell" rowHeight="207" id="KGk-i7-Jjw" customClass="AppleGoogleAccountConnectionCell" customModule="Billo" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AppleGoogleAccountConnectionCell" rowHeight="211" id="KGk-i7-Jjw" customClass="AppleGoogleAccountConnectionCell" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="161"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -40,75 +40,69 @@
                             </label>
                         </subviews>
                     </stackView>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="DJA-5V-E2V">
-                        <rect key="frame" x="18" y="60" width="284" height="31"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="nsu-1C-FM6">
+                        <rect key="frame" x="20" y="54" width="225" height="24"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="nsu-1C-FM6">
-                                <rect key="frame" x="0.0" y="0.0" width="225" height="31"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="googleLogo" translatesAutoresizingMaskIntoConstraints="NO" id="8nC-B9-TSX">
-                                        <rect key="frame" x="0.0" y="0.0" width="20" height="31"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="20" id="GfP-J9-SNK"/>
-                                        </constraints>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Lk-6h-hLy">
-                                        <rect key="frame" x="30" y="0.0" width="195" height="31"/>
-                                        <fontDescription key="fontDescription" name="TurkcellSatura" family="Turkcell Satura" pointSize="18"/>
-                                        <color key="textColor" name="darkText"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C9i-ia-jf2">
-                                <rect key="frame" x="235" y="0.0" width="51" height="31"/>
-                                <connections>
-                                    <action selector="googleSwitchToggled:" destination="KGk-i7-Jjw" eventType="valueChanged" id="m7m-3d-rLa"/>
-                                </connections>
-                            </switch>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="googleLogo" translatesAutoresizingMaskIntoConstraints="NO" id="8nC-B9-TSX">
+                                <rect key="frame" x="0.0" y="0.0" width="20" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="GfP-J9-SNK"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Lk-6h-hLy">
+                                <rect key="frame" x="30" y="0.0" width="195" height="24"/>
+                                <fontDescription key="fontDescription" name="TurkcellSatura" family="Turkcell Satura" pointSize="18"/>
+                                <color key="textColor" name="darkText"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                     </stackView>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Qfv-lu-JcV">
-                        <rect key="frame" x="18" y="107" width="284" height="31"/>
+                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rk1-er-xBy">
+                        <rect key="frame" x="253" y="50.5" width="51" height="31"/>
+                        <connections>
+                            <action selector="googleSwitchToggled:" destination="KGk-i7-Jjw" eventType="valueChanged" id="lVp-Ch-OhJ"/>
+                        </connections>
+                    </switch>
+                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oL1-Zn-emG">
+                        <rect key="frame" x="253" y="95" width="51" height="31"/>
+                        <connections>
+                            <action selector="appleSwitchToggled:" destination="KGk-i7-Jjw" eventType="valueChanged" id="Cgi-ZV-z4X"/>
+                        </connections>
+                    </switch>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="npr-AE-me6">
+                        <rect key="frame" x="20" y="100" width="225" height="21"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="npr-AE-me6">
-                                <rect key="frame" x="0.0" y="0.0" width="225" height="31"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appleLogo" translatesAutoresizingMaskIntoConstraints="NO" id="YXW-DS-mTk">
-                                        <rect key="frame" x="0.0" y="0.0" width="20" height="31"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="20" id="afE-dF-kyM"/>
-                                        </constraints>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fhD-gt-7Bt">
-                                        <rect key="frame" x="30" y="0.0" width="195" height="31"/>
-                                        <fontDescription key="fontDescription" name="TurkcellSatura" family="Turkcell Satura" pointSize="18"/>
-                                        <color key="textColor" name="darkText"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oL1-Zn-emG">
-                                <rect key="frame" x="235" y="0.0" width="51" height="31"/>
-                                <connections>
-                                    <action selector="appleSwitchToggled:" destination="KGk-i7-Jjw" eventType="valueChanged" id="Cgi-ZV-z4X"/>
-                                </connections>
-                            </switch>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appleLogo" translatesAutoresizingMaskIntoConstraints="NO" id="YXW-DS-mTk">
+                                <rect key="frame" x="0.0" y="0.0" width="20" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="afE-dF-kyM"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fhD-gt-7Bt">
+                                <rect key="frame" x="30" y="0.0" width="195" height="21"/>
+                                <fontDescription key="fontDescription" name="TurkcellSatura" family="Turkcell Satura" pointSize="18"/>
+                                <color key="textColor" name="darkText"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                     </stackView>
                 </subviews>
                 <color key="backgroundColor" name="primaryBackground"/>
                 <constraints>
+                    <constraint firstItem="npr-AE-me6" firstAttribute="top" secondItem="nsu-1C-FM6" secondAttribute="bottom" constant="22" id="0x4-zZ-Fph"/>
                     <constraint firstAttribute="trailing" secondItem="LTp-7L-DRq" secondAttribute="trailing" constant="18" id="6hh-6w-qSm"/>
                     <constraint firstItem="LTp-7L-DRq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="BSm-pP-Oug"/>
-                    <constraint firstItem="Qfv-lu-JcV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="HUa-ZQ-9KY"/>
-                    <constraint firstItem="DJA-5V-E2V" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="Lug-qM-umL"/>
-                    <constraint firstAttribute="bottom" secondItem="Qfv-lu-JcV" secondAttribute="bottom" constant="23" id="R0d-a5-lAn"/>
-                    <constraint firstItem="Qfv-lu-JcV" firstAttribute="top" secondItem="DJA-5V-E2V" secondAttribute="bottom" constant="16" id="Tl6-jB-29r"/>
-                    <constraint firstAttribute="trailing" secondItem="DJA-5V-E2V" secondAttribute="trailing" constant="18" id="Wh1-6o-y5x"/>
-                    <constraint firstItem="DJA-5V-E2V" firstAttribute="top" secondItem="LTp-7L-DRq" secondAttribute="bottom" constant="24" id="Yc2-O2-WfF"/>
-                    <constraint firstAttribute="trailing" secondItem="Qfv-lu-JcV" secondAttribute="trailing" constant="18" id="v48-PM-qo3"/>
+                    <constraint firstItem="rk1-er-xBy" firstAttribute="centerY" secondItem="nsu-1C-FM6" secondAttribute="centerY" id="FKg-py-zBV"/>
+                    <constraint firstAttribute="bottom" secondItem="npr-AE-me6" secondAttribute="bottom" constant="40" id="H8f-kE-gDn"/>
+                    <constraint firstAttribute="trailing" secondItem="oL1-Zn-emG" secondAttribute="trailing" constant="18" id="V9P-ab-lnz"/>
+                    <constraint firstAttribute="trailing" secondItem="npr-AE-me6" secondAttribute="trailing" constant="75" id="XLL-xq-NeB"/>
+                    <constraint firstItem="nsu-1C-FM6" firstAttribute="top" secondItem="LTp-7L-DRq" secondAttribute="bottom" constant="18" id="b4V-RR-oiE"/>
+                    <constraint firstItem="nsu-1C-FM6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="fL2-jo-OwU"/>
+                    <constraint firstAttribute="trailing" secondItem="rk1-er-xBy" secondAttribute="trailing" constant="18" id="kSk-Si-cJN"/>
+                    <constraint firstItem="oL1-Zn-emG" firstAttribute="centerY" secondItem="npr-AE-me6" secondAttribute="centerY" id="uuq-xW-tdy"/>
                     <constraint firstItem="LTp-7L-DRq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="18" id="xZZ-JW-v07"/>
+                    <constraint firstItem="npr-AE-me6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="yAh-t6-vnG"/>
+                    <constraint firstAttribute="trailing" secondItem="nsu-1C-FM6" secondAttribute="trailing" constant="75" id="z2G-id-9MN"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -118,7 +112,7 @@
                 <outlet property="appleLogo" destination="YXW-DS-mTk" id="cCa-OV-JJR"/>
                 <outlet property="appleSwitch" destination="oL1-Zn-emG" id="mhT-KZ-lkd"/>
                 <outlet property="googleLabel" destination="2Lk-6h-hLy" id="eLe-Sa-Ufg"/>
-                <outlet property="googleSwitch" destination="C9i-ia-jf2" id="OhG-3l-k9v"/>
+                <outlet property="googleSwitch" destination="rk1-er-xBy" id="iOB-yX-7EG"/>
                 <outlet property="titleLabel" destination="mSP-SS-yDd" id="xzk-1D-ZKy"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="181.47321428571428"/>
